// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Module should render item 1`] = `
<div>
  <p
    data-id="p element"
  >
    test
  </p>
</div>
`;

exports[`Form Module should render item when it model 1`] = `
<div>
  <input
    data-testid="input"
    type="text"
    value="test"
  />
  <p
    data-testid="p"
  >
    test
  </p>
</div>
`;

exports[`Form Module should render when item 1`] = `
<div>
  <input
    data-testid="input"
    type="text"
    value="testSomething amazing"
  />
  <p
    data-testid="pElement"
  >
    testSomething amazing
  </p>
  <p
    data-testid="pElement2"
  >
    testSomething amazing_TOBE_APPENEDED
  </p>
</div>
`;

exports[`Form Module should render with two way data binding 1`] = `
<div>
  <input
    data-testid="input"
    type="text"
    value="testThis is one of the test"
  />
  <p
    data-testid="p2-element"
  >
    testThis is one of the test
  </p>
</div>
`;
